--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
   <body>
     <h1>Euclid Street Community Garden</h1>
 
+    <div>
+      <p>Euclid Street Community Garden was established in 2012 in partnership with the DC Department of Parks & Recreation. The garden contains 40 11' x 4' plots (4 of which are ADA accessible), an orchard, a communal herb garden, and several pollinator habitats.</p>
+
+      <p>The garden is located on Euclid Street at the SW corner of 14th Street & Euclid NW in Washington, DC. </p>
+    </div>
+    <div>
+    <p>14th Street & Euclid St NW</p>
+    <p>Washington, District of Columbia</p>
+    <p>Phone 202-642-JPCG (5724)</p>
+    <p>Email euclidstgarden@gmail.com</p>
+    <p>Website http://www.euclidstreetgarden.com</p>
+    </div>
+    <p><a href="https://www.facebook.com/euclidstreetgarden">Facebook</a></p>
+    <p><a href="https://www.facebook.com/euclidstreetgarden">Twitter</a></p>
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
