added some links

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <p>14th Street & Euclid St NW</p>
     <p>Washington, District of Columbia</p>
     <p>Phone 202-642-JPCG (5724)</p>
-    <p>Email euclidstgarden@gmail.com</p>
-    <p>Website http://www.euclidstreetgarden.com</p>
+    <p>Email <a href:mailto:euclidstgarden@gmail.com>euclidstgarden@gmail.com</a></p>
+    <p>Website <ah href="http://www.euclidstreetgarden.com">http://www.euclidstreetgarden.com</a></p>
     </div>
     <p><a href="https://www.facebook.com/euclidstreetgarden">Facebook</a></p>
     <p><a href="https://www.facebook.com/euclidstreetgarden">Twitter</a></p>
