--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
     <p><a href="https://www.facebook.com/euclidstreetgarden">Facebook</a></p>
     <p><a href="https://www.facebook.com/euclidstreetgarden">Twitter</a></p>
-
+    <p><a href="plus.google.com/euclidstgarden">Google Plus</a></p>
+    <p><a href="https://foursquare.com/v/euclid-street-community-garden/4c388788ae2da593d9c300c6?ref=atw">Foursquare</a></p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
